objects/Legal_Quote_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved #</label>
        <summaryFilterItems>
            <field>Legal_Quote__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Legal_Quote__c.Legal_Quote_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BEE_Status_1__c</fullName>
        <label>BEE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEE_Status_2__c</fullName>
        <label>BEE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEE_Status_3__c</fullName>
        <label>BEE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Quote_Request_Link__c</fullName>
        <description>The link to the main folder for all Legal Quote Requests</description>
        <label>Legal Quote Request Documents Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Supplier_Link__c</fullName>
        <description>Law firm s to have link sent to them when requesting service from them</description>
        <label>Supplier Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Law_Firm_1__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legal Quote Requests</relationshipLabel>
        <relationshipName>Legal_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Law_Firm_2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legal Quote Requests (Contact)</relationshipLabel>
        <relationshipName>Legal_Quote_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Law_Firm_3__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legal Quote Requests (Contact)</relationshipLabel>
        <relationshipName>Legal_Quote_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Counsel_Name_1__c</fullName>
        <inlineHelpText>The Full Name of the External Counsel</inlineHelpText>
        <label>Preferred External Counsel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Counsel_Name_2__c</fullName>
        <inlineHelpText>The Full Name of the External Counsel</inlineHelpText>
        <label>Preferred External Counsel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Counsel_Name_3__c</fullName>
        <inlineHelpText>The Full Name of the External Counsel</inlineHelpText>
        <label>Preferred External Counsel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderID__c</fullName>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Law Firm 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>On/Off Panel Law Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Quote Requests</relationshipLabel>
        <relationshipName>Legal_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Law_Firm_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Law Firm 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>On/Off Panel Law Firm</value>
            </filterItems>
            <filterItems>
                <field>Account.Approved__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Quote Requests (Law Firm 2)</relationshipLabel>
        <relationshipName>Legal_Quote_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Law_Firm_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Law Firm 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>On/Off Panel Law Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Quote Requests (Law Firm 3)</relationshipLabel>
        <relationshipName>Legal_Quote_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation_Risk_Score__c</fullName>
        <label>Litigation Risk Score</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matter_Difficulty__c</fullName>
        <label>Matter Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Value__c</fullName>
        <formula>IF(
  Matter__r.Total_Claim_Value_New__c &gt;= 0 &amp;&amp; Matter__r.Total_Claim_Value_New__c &lt;= 30000, &quot;Very Low&quot;,
  IF(Matter__r.Total_Claim_Value_New__c&gt; 30000 &amp;&amp; Matter__r.Total_Claim_Value_New__c &lt;= 300000, &quot;Low&quot;,
  IF(Matter__r.Total_Claim_Value_New__c&gt; 300000 &amp;&amp; Matter__r.Total_Claim_Value_New__c&lt;= 5000000, &quot;Medium&quot;,
  IF(Matter__r.Total_Claim_Value_New__c&gt; 500000 &amp;&amp; Matter__r.Total_Claim_Value_New__c &lt;= 1000000, &quot;High&quot;,
  &quot;Very High&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Legal Quote Requests</relationshipLabel>
        <relationshipName>Legal_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending__c</fullName>
        <label>Pending #</label>
        <summaryFilterItems>
            <field>Legal_Quote__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Approved, Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Legal_Quote__c.Legal_Quote_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual that legal quotes approvals will be routed to.</description>
        <inlineHelpText>The individual that legal quotes approvals will be routed to.</inlineHelpText>
        <label>Quote Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Description__c</fullName>
        <label>Quote Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quote_Title__c</fullName>
        <inlineHelpText>A short description of the quote.</inlineHelpText>
        <label>Quote Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <label>Rejected #</label>
        <summaryFilterItems>
            <field>Legal_Quote__c.Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Legal_Quote__c.Legal_Quote_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Request_Motivation__c</fullName>
        <label>Request Motivation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Off_Panel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Off Panel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Services__c</fullName>
        <label># Requested Services</label>
        <summaryFilterItems>
            <field>Legal_Quote__c.Request_for_Service__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Legal_Quote__c.Legal_Quote_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services #</label>
        <summaryForeignKey>Legal_Quote_Service__c.Legal_Quote_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total #</label>
        <summaryForeignKey>Legal_Quote__c.Legal_Quote_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Legal Quote Request</label>
    <listViews>
        <fullName>All_Legal_Quote_Requests</fullName>
        <columns>NAME</columns>
        <columns>Matter__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Legal_Quote_Request__c.Legal_Request</value>
        </filters>
        <label>All - Legal Quote Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Litigation_Quote_Requests</fullName>
        <columns>NAME</columns>
        <columns>Matter__c</columns>
        <columns>Cost_Centre__c</columns>
        <columns>Matter_Difficulty__c</columns>
        <columns>Matter_Value__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Litigation_Risk_Score__c</columns>
        <columns>Quote_Title__c</columns>
        <columns>Request_Off_Panel__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Legal_Quote_Request__c.Litigation_Off_Panel,Legal_Quote_Request__c.Litigation_Request</value>
        </filters>
        <label>All - Litigation Quote Requests</label>
    </listViews>
    <nameField>
        <displayFormat>QR-{000000}</displayFormat>
        <label>Quote Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Quote Requests</pluralLabel>
    <recordTypes>
        <fullName>Legal_Off_Panel</fullName>
        <active>true</active>
        <label>Legal (Off Panel)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Request</fullName>
        <active>true</active>
        <label>Legal Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_Off_Panel</fullName>
        <active>true</active>
        <label>Litigation (Off Panel)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_Request</fullName>
        <active>true</active>
        <label>Litigation Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Motivation_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Request_Off_Panel__c, ISBLANK( Request_Motivation__c ))</errorConditionFormula>
        <errorDisplayField>Request_Motivation__c</errorDisplayField>
        <errorMessage>Please fill out the motivation for requesting off panel firm</errorMessage>
    </validationRules>
</CustomObject>